welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ';' expected but 'else' found.
def move(nbPas:Int,versLAvant:Boolean) {if (versLAvant) {for (compteur <- 1 to nbPas) {avance()} else {for (compteur <- 1 to nbPas) {recule()}}}} 
                                                                                                 ^